--- a/research-projects/index.html
+++ b/research-projects/index.html
@@ -289,26 +289,22 @@ h4{font-size: 1.05em;
 	</div><!-- #primary -->
 
 
-		<aside id="secondary" class="sidebar sidebar-primary widget-area" role="complementary">
-			<section id="custom_html-3" class="widget_text widget widget_custom_html"><h3 class="widget-title">News</h3><div class="textwidget custom-html-widget">June 2025 <br>
+			<aside id="secondary" class="sidebar sidebar-primary widget-area" role="complementary">
+			<section id="custom_html-3" class="widget_text widget widget_custom_html"><h3 class="widget-title">News</h3><div class="textwidget custom-html-widget">
+			December 2025 <br>
+New <a href="/content/publication-and-talks#articles">research note</a> using longitudinal data forthcoming in European Journal of Political Research on democratic support among non-citizens.<br><br>
+				October 2025 <br>New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in Ethnic and Racial Studies on discrimination and trust in the police.<br><br>
+
+September 2025 <br>
+New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in Personality and Individual Differences on tolerance for ambiguity and vote choice for the AfD.<br><br>
+			June 2025 <br>
 New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in West European Politics on the political life cycle of immigrant-origin citizens.<br><br>
 April 2025<br>
-I was guest editor for a <a href="/content/publication-and-talks#specialissues">special issue</a> at Politics and Governance. <br><br>
+I was guest editor for a <a href="/content/publication-and-talks#specialissues">special issue</a> at Politics and Governance (Political Participation among Minorities and Young Voters) as well as Soziale Welt (Comparative Research on Refugees) <br><br>
 January 2025<br>
 New <a href="/content/publication-and-talks#articles"> article</a> published in Political Studies on  transnational political interest among Germans from Turkey.<br><br>
 May 2024 <br>
 New survey-experimental <a href="/content/publication-and-talks#articles">article</a> forthcoming in Research &amp; Politics on armed conflict as a threat to social cohesion. <br> <br>
-
-April 2024 <br>
-New <a href="/content/publication-and-talks#articles">article</a> published in Electoral Studies on the potentials of IMGES I. <br> <br>
-
-November 2023 <br>
-New <a href="/content/publication-and-talks#articles">article</a> published in Quality and Quantity on the measurement of negative partisanship in multi-party systems.<br> <br>
-March 2023 <br>
-New experimental <a href="/content/publication-and-talks#articles">research note</a> published in IJSRM on the effects of home visits on panel participation.
-<br> <br>
-March 2023 <br>
-New survey-experimental <a href="/content/publication-and-talks#articles">research note</a> published in the British Journal of Sociology on preference patterns towards immigration among majority and minority members.<br> <br>
 
 
 </div></section>		</aside><!-- .sidebar sidebar-primary widget-area -->
