--- a/media-coverage/index.html
+++ b/media-coverage/index.html
@@ -306,7 +306,25 @@ h4{font-size: 1.05em;
 			
 		</main><!-- #main -->
 	</div><!-- #primary -->
+	<aside id="secondary" class="sidebar sidebar-primary widget-area" role="complementary">
+			<section id="custom_html-3" class="widget_text widget widget_custom_html"><h3 class="widget-title">News</h3><div class="textwidget custom-html-widget">
+			December 2025 <br>
+New <a href="/content/publication-and-talks#articles">research note</a> using longitudinal data forthcoming in European Journal of Political Research on democratic support among non-citizens.<br><br>
+				October 2025 <br>New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in Ethnic and Racial Studies on discrimination and trust in the police.<br><br>
 
+September 2025 <br>
+New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in Personality and Individual Differences on tolerance for ambiguity and vote choice for the AfD.<br><br>
+			June 2025 <br>
+New <a href="/content/publication-and-talks#articles"> article</a> forthcoming in West European Politics on the political life cycle of immigrant-origin citizens.<br><br>
+April 2025<br>
+I was guest editor for a <a href="/content/publication-and-talks#specialissues">special issue</a> at Politics and Governance (Political Participation among Minorities and Young Voters) as well as Soziale Welt (Comparative Research on Refugees) <br><br>
+January 2025<br>
+New <a href="/content/publication-and-talks#articles"> article</a> published in Political Studies on  transnational political interest among Germans from Turkey.<br><br>
+May 2024 <br>
+New survey-experimental <a href="/content/publication-and-talks#articles">article</a> forthcoming in Research &amp; Politics on armed conflict as a threat to social cohesion. <br> <br>
+
+
+</div></section>		</aside><!-- .sidebar sidebar-primary widget-area -->
 
 	    </div><!-- #content -->
 				<footer id="colophon" class="site-footer" role="contentinfo">
